souphttpsrc: Allow any type of proxy

Currently we only allowed HTTP proxy. Don't filter for the scheme, just check
if it looks like an URI. Soup will warn if the URI is invalid or if
proxy protocol is not supported. This enables using SOCKS 4/5 which is
directly implemented into GIO.

https://bugzilla.gnome.org/show_bug.cgi?id=783012